--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -1,10 +1,10 @@
 ---
+import Layout from "@layouts/Layout.astro"
 const data = Astro.locals
 const isLogin = !!data.user?.id;
-const currentPath = Astro.url.pathname;
 ---
 
-<div>
+<Layout>
     <div>
         {isLogin ? 
             <div>
@@ -23,22 +23,19 @@ const currentPath = Astro.url.pathname;
     <div>
         {isLogin ?
             <div>
-                <form method="post" action="/">
-                    <button type="submit">Profile</button>
-                </form>
-                <form method="post" action="/logout">
+                <form method="post" action="/profile/logout">
                     <button type="submit">Log Out</button>
                 </form>
             </div>
             :
             <div>
-                <form method="post" action="/login">
+                <form method="post" action="/profile/login">
                     <button type="submit">Log In</button>
                 </form>
-                <form method="post" action="/signup">
+                <form method="post" action="/profile/signup">
                     <button type="submit">Sign Up</button>
                 </form>
             </div>
         }
     </div>
-</div>
+</Layout>
