--- a/src/styles/chat-window.css
+++ b/src/styles/chat-window.css
@@ -14,7 +14,7 @@
     gap: 20px;
     flex-direction: column;
     flex-wrap: nowrap;
-    justify-content: start;
+    justify-content: space-between;
     align-items: center;
     align-content: center;
 }
@@ -67,6 +67,14 @@
     font-size: 20px;
 }
 
+.container-arrow-zoe{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
 .container-zoe{
     display: flex;
     flex-direction: row;
@@ -90,4 +98,17 @@
     width: 100%;
     max-width: 40px;
     transform: scale(1.6);
+}
+
+/* TEXTBOX */
+.chat-room_footer{
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+
+.chat-room_footer > input{
+    width: 100%;
+    border-radius: 10px;
 }
