--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,12 +18,10 @@ html.dark {
 *{
   box-sizing: border-box;
   margin: 0;
-
 }
 
 body {
   font-size: 16px;
-
 
   display: flex;
   flex-direction: column;
@@ -43,7 +41,6 @@ body {
 main {
   flex: 1;
   padding: 1rem;
-  width: 100%;
 
 }
 
@@ -51,6 +48,9 @@ footer {
   padding: 1rem;
   width: 100%;
 
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
 
