--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,7 +25,9 @@ body {
 
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+
+  min-height: 100vh; 
+  min-height: 100dvh;
 
   align-items: center;
   justify-content: flex-start; 
