--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,10 +17,10 @@ if (!isLogin){
         </div>
         <RoomSelector className="menu-row menu-main" client:visible/>
         <div class="menu-row menu-secondary">
-            <div>
+            <div class="secondary-card left">
                 El Sendero de la Vida
             </div>
-            <div>
+            <div class="secondary-card right">
                 Nuestro Match
             </div>
         </div>
