--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,8 +26,10 @@ body {
   display: flex;
   flex-direction: column;
 
-  min-height: 100vh; 
+  min-height: 100vh;
   min-height: 100dvh;
+
+  width: 100%;
 
   align-items: center;
   justify-content: flex-start; 
