--- a/src/styles/chat-card.css
+++ b/src/styles/chat-card.css
@@ -1,12 +1,12 @@
 .card-container{
-    height: 12rem;
-    width: 12rem;
+    height: 180px;
+    width: 190px;
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
 
     color: white;
+    text-wrap: pretty;
 
     border-radius: 16px;
 
