--- a/src/styles/chat-window.css
+++ b/src/styles/chat-window.css
@@ -11,23 +11,24 @@
 
 .chat-room_container{
     display: flex;
-    gap: 20px;
+    gap: 12px;
     flex-direction: column;
     flex-wrap: nowrap;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     align-content: center;
 }
 
 .chat-room_header{
     width: 100vw;
+    width: 100dvw;
     background-color: white;
 }
 
 /* message bubble */
 
 .message-bubble{
-    width: 48%;
+    width: 49%;
 }
 
 .bubble_user{
@@ -37,8 +38,10 @@
 .message-bubble_message{
     background-color: white;
     color: black;
-    padding: 5px 0;
+    padding: 10px 14px;
     border-radius: 16px;
+    text-wrap: pretty;
+    line-height: 1.2;
     text-align: center;
 }
 
@@ -105,10 +108,13 @@
     width: 80%;
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: end;
     gap: 10px;
 }
 
 .chat-room_footer > input{
     width: 100%;
+    height: 40px;
     border-radius: 10px;
 }
