Fix: password input

--- a/src/pages/profile/login.astro
+++ b/src/pages/profile/login.astro
@@ -1,9 +1,6 @@
 ---
 import Layout from "@layouts/Layout.astro";
 
-if(Astro.locals.user !== null){
-    return Astro.redirect("/")
-}
 const url = new URL(Astro.request.url);
 const errorMessage = url.searchParams.get("error");
 
@@ -15,21 +12,15 @@ if (isLogin){
 ---
 
 <Layout>
-    <div>
+    <div class="form-container">
         <h1>Sign in</h1>
         <form method="post" action="/api/login">
             <label for="username">Username</label>
             <input id="username" name="username" />
             <label for="password">Password</label>
-            <input id="password" name="password" />
+            <input type="password" id="password" name="password" />
             <button>Continue</button>
         </form>
-        {errorMessage && <p class="error-message">{errorMessage}</p>}
     </div>
+    {errorMessage && <p class="error-message">{errorMessage}</p>}
 </Layout>
-<style>
-    .error-message {
-        color: red;
-        margin-bottom: 10px;
-    }
-</style>
