--- a/src/styles/chat-window.css
+++ b/src/styles/chat-window.css
@@ -118,3 +118,37 @@
     height: 40px;
     border-radius: 10px;
 }
+
+/* menu */
+
+.menu-button{
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.menu-options{
+    position: absolute;
+    right: 1%;
+    top: 9%;
+    background: white;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    padding: 5px 0;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    z-index: 10;
+    display: flex;
+    flex-direction: column;
+}
+
+.menu-options button {
+    padding: 8px 12px;
+    background: none;
+    border: none;
+    text-align: left;
+    cursor: pointer;
+}
+
+.menu-options button:hover {
+    background: #f0f0f0;
+}
